forKubernetes/parsers/parsersDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: parsers-deployment
  namespace: parsers-ns
  labels:
    app: parsers-labels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parsers-selector
  template:
    metadata:
      labels:
        app: parsers-selector
    spec:
      containers:
        - name: parser
          image: vynovikov/highloadparser:0.29
          ports:
            - containerPort: 3000
