forKubernetes/parsers/parsersService.yaml
apiVersion: v1
kind: Service
metadata:
  name: parsers-svc
  namespace: parsers-ns
spec:
  selector:
    app: parsers-selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
